--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -7,7 +7,7 @@ on:
       - master
       
   schedule:
-  - cron: "0 7,9,11 * * 1,3" # See https://crontab.guru/#0_7,9,11_*_*_1,3
+  - cron: "0 9 * * *" # See https://crontab.guru/#0_9_*_*_*
 
 jobs:
   auto_commit:
@@ -25,8 +25,8 @@ jobs:
           
       - name: Commit changes
         run: |
-          git config --local user.email "mazipanneh@gmail.com"
-          git config --local user.name "mazipan"
+          git config --local user.email "ibuu2021@gmail.com"
+          git config --local user.name "ibuu"
           git add -A
           
           arr[0]="chore(bot): 😂 auto commit"
